--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bad-words": "^3.0.4",
     "immer": "^9.0.16",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.2",
