--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.2",
